--- a/SuperSimpleDev-Lessons/lesson-10/10-rock-paper-scissors.html
+++ b/SuperSimpleDev-Lessons/lesson-10/10-rock-paper-scissors.html
@@ -4,52 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rock Paper Scissors</title>
-  <style>
-    body{
-      background-color: rgb(25, 25, 25);
-      color: white;
-      font-family: Arial;
-    }
-
-    h1{
-      font-size: 30px;
-      font-weight: bold;
-      margin-top: 35px;
-    }
-
-    .move-icon {
-      background-color:  rgb(25, 25, 25);
-      position: relative;
-      width: 50px;
-      height: 50px;
-    }
-
-    .move-button {
-      margin-right: 10px;
-      background-color: transparent;
-      border: 3px solid white;
-      border-radius: 50%;
-      width: 120px;
-      height: 120px;
-      cursor: pointer;
-    }
-
-    .result {
-      font-size: 25px;
-      font-weight: bold;
-      margin-top: 55px;
-    }
-
-    .reset-button{
-      background-color: white;
-      border: none;
-      width: 110px;
-      height: 34px;
-      cursor: pointer;
-      font-weight: 500;
-      font-size: 16px;
-    }
-  </style>
+  <link rel="stylesheet" href="../../styles/10-rock-paper-scissors.css">
 </head>
 <body>
   <h1>Rock Paper Scissors</h1>
@@ -90,95 +45,8 @@
   "
   class="reset-button">Reset Score</button>
 
-  <script>
-    let score = JSON.parse(localStorage.getItem('score')) ||{
-    win: 0,
-    lose: 0,
-    tie: 0
-};
-
-updateScoreElement();
-
-function playGame(playerMove){
-
-  const computerMove = pickComputerMove();
-
-  let result = '';
-
-  if(playerMove === "scissors") {
-    if(computerMove === 'Rock'){
-      result = 'You lose.';
-    }
-    else if(computerMove === 'Paper'){
-      result = 'You win.';
-    } else {
-      result = 'Tie.';
-    }
-  }
-  
-  else if (playerMove === "paper") {
-    if(computerMove === 'Rock'){
-      result = 'You win.';
-    }
-    else if(computerMove === 'Paper'){
-      result = 'Tie.';
-    } else {
-      result = 'You lose.';
-    }
-  }
-  
-  else{
-    if(computerMove === 'Rock'){
-      result = 'Tie.';
-    }
-    else if(computerMove === 'Paper'){
-      result = 'You lose.';
-    } else {
-      result = 'You win.';
-    }
-  }
-
-    if (result === 'You win.') {
-      score.win += 1;
-    } else if (result === 'You lose.') {
-      score.lose += 1;
-    } else if (result === 'Tie.') {
-      score.tie += 1;
-    }
-
-    localStorage.setItem('score', JSON.stringify(score));
-
-    updateScoreElement();
-
-    document.querySelector('.js-result')
-    .innerHTML = result;
-
-    document.querySelector('.js-move').innerHTML 
-    = `You 
-<img class="move-icon" src="${playerMove}-emoji.png" alt="">
-<img class="move-icon" src="${computerMove}-emoji.png" alt="">
-Computer`;
-}
-
-function updateScoreElement(){
-  const scoreElement = document.querySelector('.js-score')
-  .innerHTML = `Win: ${score.win}  Lose: ${score.lose}  Tie: ${score.tie}`;
-}
-
-function pickComputerMove(){
-  const randomNumber = (Math.random());
-
-  let computerMove = '';
-
-  if (randomNumber >= 0 && randomNumber < 1 / 3) {
-    computerMove = 'Rock';
-  } else if (randomNumber >= 1 / 3 && randomNumber < 2 / 3) {
-    computerMove = 'Paper';
-  } else{
-    computerMove = 'Scissors';
-  }
-  return computerMove;
-}
+  <script src="../../scripts/10-rock-paper-scissors.js">
+    
   </script>
 </body>
 </html>
