--- a/SuperSimpleDev-Lessons/lesson-11/11-arrayas-and-loops.html
+++ b/SuperSimpleDev-Lessons/lesson-11/11-arrayas-and-loops.html
@@ -46,7 +46,7 @@
       console.log(element);
     } */
 
-    const array = [1, 1, 3];
+/*     const array = [1, 1, 3];
     let total = 0;
     for (let i  = 0; i < array.length; i++) {
       total = array[i] + total;
@@ -56,7 +56,24 @@
     for (let i = 0; i < array.length; i++) {
       array[i] = array[i] * 2;
     }
-    console.log(array);
+    console.log(array); */
+
+/*     for (let i = 0; i <= 10; i++) {
+      if (i % 2 === 0) {
+        continue;
+      }
+      console.log(i);
+      i++;
+    } */
+
+   /*  let i = 1;
+    while (i < 999) {
+      if (i % 15 === 0) {
+        break;
+      }
+      console.log(i);
+      i++;
+    } */
   </script> 
 </body>
 </html>
