--- a/SuperSimpleDev-Lessons/lesson-12/12-rock-paper-scissors.html
+++ b/SuperSimpleDev-Lessons/lesson-12/12-rock-paper-scissors.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rock Paper Scissors</title>
-  <link rel="stylesheet" href="../../styles/10-rock-paper-scissors.css">
+  <link rel="stylesheet" href="../../styles/12-rock-paper-scissors.css">
 </head>
 <body>
   <h1>Rock Paper Scissors</h1>
@@ -42,10 +42,13 @@
   score.tie = 0;
   localStorage.removeItem('score');
   updateScoreElement();
-  "
-  class="reset-button">Reset Score</button>
+  "class="reset-button">Reset Score</button>
 
-  <script src="../../scripts/10-rock-paper-scissors.js">
+  <button class="auto-play-button" onclick="
+    autoPlay();
+  ">Auto Play</button>
+
+  <script src="../../scripts/12-rock-paper-scissors.js">
     
   </script>
 </body>
