--- a/SuperSimpleDev-Lessons/lesson-12/12-advanced-functions.html
+++ b/SuperSimpleDev-Lessons/lesson-12/12-advanced-functions.html
@@ -26,10 +26,27 @@
       266
     ]
 
-    array2.forEach(function(value, index){
+/*     array2.forEach(function(value, index){
       console.log(index);
       console.log(value);
-    })
+    }); */
+
+/*     array2.forEach((value, index) => {
+      console.log(value);
+      
+    }); */
+
+    console.log([1, 2, -5, 15].filter( (value, index) => {
+      return value >= 0 ;
+    }));
+      
+    console.log([1, 1, 3].map((value, index) => {
+      return value * 2;
+    }));
+
+    console.log([1, 1, 3].map(value => value * 2));
+
+    console.log([1, 5, -5].map(value => value * 2));
   </script> 
 </body>
 </html>
